--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -26,7 +26,7 @@
                 android:id="@+id/nickname"
                 android:maxLines="1"
                 android:textSize="16sp"
-                android:textColor="@android:color/holo_blue_dark"
+                android:textColor="@color/colorNickName"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>
 
