--- a/app/src/main/res/layout/item_tweet.xml
+++ b/app/src/main/res/layout/item_tweet.xml
@@ -1,68 +1,80 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp"
-        android:orientation="horizontal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools">
 
-    <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="50dp"
-            android:layout_height="50dp"/>
+    <data>
+        <variable name="tweet" type="pl.atlantischi.wechatmoments.data.model.Tweet"/>
+        <import type="android.view.View"/>
+    </data>
 
     <LinearLayout
-            android:orientation="vertical"
-            android:layout_marginLeft="3dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginBottom="10dp"
+            android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-        <TextView
-                android:id="@+id/nickname"
-                android:maxLines="1"
-                android:textSize="16sp"
-                android:textColor="@color/colorNickName"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <TextView
-                android:id="@+id/content"
-                android:textSize="14sp"
-                android:textColor="@android:color/black"
-                android:layout_marginTop="2dp"
-                android:layout_marginBottom="5dp"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"/>
-
-        <com.lzy.ninegrid.NineGridView
-                android:id="@+id/nine_grid"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="8dp"
-                app:ngv_gridSpacing="3dp"
-                app:ngv_maxSize="9"
-                app:ngv_mode="grid"
-                app:ngv_singleImageRatio="1"
-                app:ngv_singleImageSize="200dp"/>
+        <ImageView
+                app:imageUrl="@{tweet.sender.avatar}"
+                android:id="@+id/avatar"
+                android:layout_width="50dp"
+                android:layout_height="50dp"/>
 
         <LinearLayout
-                android:id="@+id/comments_wrapper"
-                android:background="#ddd"
-                android:paddingTop="2dp"
-                android:paddingBottom="2dp"
-                android:paddingLeft="4dp"
-                android:paddingRight="4dp"
                 android:orientation="vertical"
+                android:layout_marginLeft="3dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
+
+            <TextView
+                    android:id="@+id/nickname"
+                    android:text="@{tweet.sender.nick}"
+                    android:maxLines="1"
+                    android:textSize="16sp"
+                    android:textColor="@color/colorNickName"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <TextView
+                    android:id="@+id/content"
+                    android:text="@{tweet.content}"
+                    android:textSize="14sp"
+                    android:textColor="@android:color/black"
+                    android:layout_marginTop="2dp"
+                    android:layout_marginBottom="5dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+
+            <com.lzy.ninegrid.NineGridView
+                    app:imageUrls="@{tweet.images}"
+                    android:id="@+id/nine_grid"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="8dp"
+                    app:ngv_gridSpacing="3dp"
+                    app:ngv_maxSize="9"
+                    app:ngv_mode="grid"
+                    app:ngv_singleImageRatio="1"
+                    app:ngv_singleImageSize="200dp"/>
+
+            <LinearLayout
+                    app:comments="@{tweet.comments}"
+                    android:id="@+id/comments_wrapper"
+                    android:visibility="@{tweet.comments.isNullOrEmpty() ? View.INVISIBLE : View.VISIBLE}"
+                    android:background="#ddd"
+                    android:paddingTop="2dp"
+                    android:paddingBottom="2dp"
+                    android:paddingLeft="4dp"
+                    android:paddingRight="4dp"
+                    android:orientation="vertical"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+            </LinearLayout>
 
         </LinearLayout>
 
     </LinearLayout>
-
-</LinearLayout>
+</layout>
