--- a/app/src/main/res/layout/activity_moments.xml
+++ b/app/src/main/res/layout/activity_moments.xml
@@ -119,6 +119,7 @@
             <androidx.appcompat.widget.ButtonBarLayout
                     android:id="@+id/buttonBarLayout"
                     android:layout_gravity="center"
+                    android:background="@android:color/transparent"
                     android:layout_height="wrap_content"
                     android:layout_width="wrap_content">
 
